Chinese PRC Cos. Tag

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -2818,14 +2818,14 @@
  QUE_nationalist_DEF: "Quebec"
  QUE_nationalist_ADJ: "Québécois"
 
- CHI_fascism: "Chinese Empire"
- CHI_fascism_DEF: "the Chinese Empire"
+ CHI_fascism: "China"
+ CHI_fascism_DEF: "China"
  CHI_democratic: "Chinese Republic"
  CHI_democratic_DEF: "the Chinese Republic"
  CHI_neutrality: "China"
  CHI_neutrality_DEF: "China"
- CHI_communism: "People's Republic of China"
- CHI_communism_DEF: "the People's Republic of China"
+ CHI_communism: "China"
+ CHI_communism_DEF: "China"
  CHI_fascism_ADJ: "Chinese"
  CHI_democratic_ADJ: "Chinese"
  CHI_neutrality_ADJ: "Chinese"
@@ -2833,6 +2833,9 @@
  CHI_nationalist: "China"
  CHI_nationalist_DEF: "China"
  CHI_nationalist_ADJ: "Chinese"
+ CHI_AUTH_S: "People's Republic of China"
+ CHI_AUTH_S_DEF: "the People's Republic of China"
+ CHI_AUTH_S_ADJ: "Chinese"
 
  CHL_fascism: "Chile"
  CHL_fascism_DEF: "Chile"
