--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -880,6 +880,7 @@
  VICTORY_POINTS_11034: "Malakal"
  VICTORY_POINTS_13218: "Bentiu"
  VICTORY_POINTS_11917: "Wau"
+ VICTORY_POINTS_11049: "Abyei"
  VICTORY_POINTS_13250: "Aweil"
  VICTORY_POINTS_11608: "Juba"
  VICTORY_POINTS_1953: "Yambio"
@@ -1134,9 +1135,10 @@
  VICTORY_POINTS_11500: "Bol"
  VICTORY_POINTS_3181: "Mongo"
  VICTORY_POINTS_10758: "Zinder"
- VICTORY_POINTS_14582: "Bilma"
+ VICTORY_POINTS_8030: "Bilma"
  VICTORY_POINTS_8028: "Maradi"
- VICTORY_POINTS_14316: "Abala"
+ VICTORY_POINTS_11286: "N'guigmi"
+ VICTORY_POINTS_14316: "Dogondoutchi"
  VICTORY_POINTS_11324: "Agadez"
  VICTORY_POINTS_14559: "Arlit"
  VICTORY_POINTS_11303: "Tahoua"
@@ -1170,9 +1172,10 @@
  VICTORY_POINTS_8039: "Tamale"
  VICTORY_POINTS_8096: "Bolgatanga"
  VICTORY_POINTS_12787: "Kumasi"
- VICTORY_POINTS_7950: "Ouahigouya"
+ VICTORY_POINTS_7950: "Djibo"
  VICTORY_POINTS_10836: "Ouagadougou"
- VICTORY_POINTS_7983: "Bobo Dioulasso"
+ VICTORY_POINTS_12851: "Ouahigouya"
+ VICTORY_POINTS_14818: "Bobo Dioulasso"
  VICTORY_POINTS_10803: "Abidjan"
  VICTORY_POINTS_10762: "Daloa"
  VICTORY_POINTS_9398: "Yamoussoukro"
@@ -1197,10 +1200,14 @@
  VICTORY_POINTS_4989: "Banjul"
  VICTORY_POINTS_10788: "Timbuktu"
  VICTORY_POINTS_5101: "Gao"
- VICTORY_POINTS_10868: "Kidal"
+ VICTORY_POINTS_14797: "Ansongo"
+ VICTORY_POINTS_14775: "Kidal"
+ VICTORY_POINTS_14844: "Mopti"
+ VICTORY_POINTS_14785: "Menaka"
+ VICTORY_POINTS_14829: "Koulikoro"
  VICTORY_POINTS_12794: "Sikasso"
  VICTORY_POINTS_12751: "Bamako"
- VICTORY_POINTS_10829: "Kita"
+ VICTORY_POINTS_14827: "Kita"
  VICTORY_POINTS_6709: "Nouakchott"
  VICTORY_POINTS_8058: "Kiffa"
  VICTORY_POINTS_8035: "Zoueirat"
@@ -2139,7 +2146,7 @@
  VICTORY_POINTS_8023: "Chuxiong"
  VICTORY_POINTS_2067: "Mianning"
  VICTORY_POINTS_3048: "Zhongdian"
- VICTORY_POINTS_1999: "Muli"
+ VICTORY_POINTS_3074: "Muli"
  VICTORY_POINTS_7988: "Garze"
  VICTORY_POINTS_10841: "Ya'an"
  VICTORY_POINTS_4999: "Kangding"
@@ -2171,7 +2178,8 @@
  VICTORY_POINTS_10817: "Darlag"
  VICTORY_POINTS_1882: "Madoi"
  VICTORY_POINTS_4536: "Xinghai"
- VICTORY_POINTS_10750: "Dulan"
+ VICTORY_POINTS_10750: "Gonghe"
+ VICTORY_POINTS_14850: "Dulan"
  VICTORY_POINTS_5033: "Lhasa"
  VICTORY_POINTS_10856: "Qamdo"
  VICTORY_POINTS_4407: "Markam"
@@ -4271,7 +4279,6 @@
  VICTORY_POINTS_6602: "Nêma"
  VICTORY_POINTS_7857: "Kayes"
  VICTORY_POINTS_9251: "Yélimané"
- VICTORY_POINTS_7857: "Bafoulabé"
  VICTORY_POINTS_10915: "Gogui"
  VICTORY_POINTS_9231: "Koulikoro"
  VICTORY_POINTS_10812: "Nara Cercle"
@@ -4280,7 +4287,8 @@
  VICTORY_POINTS_7501: "Manankoro"
  VICTORY_POINTS_7554: "Dioïla"
  VICTORY_POINTS_4927: "Koutiala"
- VICTORY_POINTS_9170: "Djenné"
+ VICTORY_POINTS_9170: "Segou"
+ VICTORY_POINTS_14836: "Djenne"
  VICTORY_POINTS_12838: "Tonka"
  VICTORY_POINTS_2044: "Diré"
  VICTORY_POINTS_7954: "Douentza"
@@ -4296,6 +4304,7 @@
  VICTORY_POINTS_9916: "Ziniaré"
  VICTORY_POINTS_9872: "Pouytenga"
  VICTORY_POINTS_2001: "Fada N'Gourma"
+ VICTORY_POINTS_10406: "Catllar"
  VICTORY_POINTS_13305: "Essau"
  VICTORY_POINTS_13306: "Georgetown"
  VICTORY_POINTS_13304: "Seguo"
@@ -4318,7 +4327,6 @@
  VICTORY_POINTS_14485: "Gdynia"
  VICTORY_POINTS_14486: "Sopot"
  VICTORY_POINTS_14506: "Birendranagar"
- VICTORY_POINTS_14582: "Qulansiya"
  VICTORY_POINTS_3469: "Hajjah"
  VICTORY_POINTS_14577: "Dhamar"
  VICTORY_POINTS_14567: "Al-Mukha"
