--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -364,9 +364,9 @@
  STATE_363: "Senegal-Nord"
  STATE_364: "Senegal-Central"
  STATE_365: "Gambia"
- STATE_366: "Azawad"
- STATE_367: "Eastern Mali"
- STATE_368: "Western Mali"
+ STATE_366: "Tombouctou"
+ STATE_367: "Sikasso"
+ STATE_368: "Koulikoro"
  STATE_369: "Coastal Mauritania"
  STATE_370: "Mauritanian Sahel"
  STATE_371: "Adrar"
@@ -1161,3 +1161,8 @@
  STATE_1160: "Ungava"
  STATE_1161: "Kitaa"
  STATE_1162: "Tunu"
+ STATE_1163: "Kidal"
+ STATE_1164: "Gao"
+ STATE_1165: "Menaka"
+ STATE_1166: "Kayes"
+ STATE_1167: "Ansongo"
