Simp-Chinese update

--- a/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_BLR_l_simp_chinese.yml
@@ -888,11 +888,9 @@
  BLR_poezdka_po_region_rf: "§Y前往§!§Y[SOV.GetNameWithFlag]§!地区旅行"
  BLR_luka_on_tv: "在联盟电视上§Y发言§!"
  BLR_verbovka_chinovnik: "§Y招募§!一些地区官员"
- BLR_russian_media: "让俄罗斯媒体介入"
- BLR_russian_market: "整合进俄罗斯市场"
  BLR_russian_fsb: "让俄联邦安全局代表进驻政府办公室"
  BLR_russian_tver: "购买货车"
- BLR_russian_teplovzor: "开启俄罗斯热成像生产"
+ BLR_russian_teplovzor: "开始生产热像仪"
  BLR_intermarium_faction: "海间联邦"
  BLR_pro_russian_military: "亲苏军队"
  BLR_prorussian_officers: "亲苏军官"
@@ -1454,7 +1452,7 @@
  BLR_AES: "白俄罗斯核电站"
  BLR_AES_desc: "我们终于要建造自己的核电站了。"
  BLR_Chinese_kal: "与中国的贸易协定"
- BLR_Chinese_kal_desc: ""
+ BLR_Chinese_kal_desc: "我们将与中国签订贸易协定，这将使我们能够增加格罗德诺“氮”化工厂的产能"
  BLR_Chinese_zdania: "新建工厂"
  BLR_Chinese_zdania_desc: "中国政府正在加大对我国的投资并准备建设新工厂。"
  BLR_Chinese_konfuci: "孔子学院"
@@ -1592,20 +1590,10 @@
  BLR_military_invest_desc: "我国需要能够制造数十辆新型装甲车的工厂。"
  BLR_military_new_generations: "新一代士兵"
  BLR_military_new_generations_desc: "我们要向新一代军人灌输军国主义理想、爱国主义精神。"
- BLR_rne_in_belarus: "白俄罗斯的俄罗斯民族团结"
- BLR_rne_in_belarus_desc: "俄罗斯的俄罗斯民族主义者将被邀请加入我们的行列，帮助捍卫白俄罗斯的俄罗斯革命。"
- BLR_unite_with_rus_nazbol: "俄罗斯民族布尔什维克"
- BLR_unite_with_rus_nazbol_desc: "现在是我们从占领者手中夺回俄罗斯的时候了。"
- BLR_use_nazbol_socnet: "通过社交网络推广我们的想法"
- BLR_use_nazbol_socnet_desc: "我们必须影响年轻人的思想，因为这是我们的未来。社交网络是宣传的理想场所。"
- BLR_nazbol_bribe_politician: "贿赂政客"
- BLR_nazbol_bribe_politician_desc: "任何政客都是腐败的——唯一的问题是价格。"
- BLR_nazbol_take_russia: "克里姆林宫上空利莫诺夫的旗帜"
- BLR_nazbol_take_russia_desc: "终于！俄罗斯自由了！"
  BLR_PinskDrev: "注资平斯克德雷夫"
  BLR_PinskDrev_desc: "白俄罗斯木工行业的大型企业，平斯克最古老的企业。我们应该资助他们的活动，以便他们进一步发展。"
  BLR_metro_minsk: "扩建明斯克地铁"
- BLR_metro_minsk_desc: ""
+ BLR_metro_minsk_desc: "我们将完善和扩建明斯克地铁，提高城市的物流特色。"
  BLR_belarus_support_category: "白俄罗斯辅助部队"
  BLR_ter_oboronaup_start: "呼吁派遣国土防御部队"
  BLR_internalup_start: "召集第三独立特种用途旅"
@@ -1789,7 +1777,6 @@
  BLR_union_integration_part7_desc: "\n\n£idea_SOV_union_integration_desc_picture\n\n\n\n我们已经完全整合进了联盟国。"
  BLR_region_production_desc: "我们是时候更深入地进入俄罗斯市场了，我们将从合作中获取最大利润。"
  BLR_MVD: "内政部"
- BLR_MVD_omon_desc: "白俄罗斯国家行政机构，领导内务部的内政机构和内部部队系统，在其权力范围内，在打击犯罪、保护公共秩序、确保公共安全和协调等领域进行监管和管理，其他共和国国家行政机构在这一领域的活动。"
  BLR_Internal_troops: "内部部队"
  BLR_Internal_troops_desc: "白俄罗斯国家军事组织，保护白俄罗斯共和国公民权利、宪法制度、安全和主权免遭犯罪侵犯。"
  BLR_kgb_expand: "国家安全委员会"
@@ -2144,8 +2131,8 @@
  BLR_Kal2_desc: "最近我们针对俄罗斯乌拉尔钾肥员工发起的刑事案件以及他们滥用职权的行为迫使我们关闭了一家联合交易商并创建了我们自己的交易商。"
  BLR_kal_with: "私人股份有限公司‘白俄罗斯钾肥公司’"
  BLR_kal_without: "股份有限公司‘白俄罗斯钾肥公司’"
- BLR_with_tt: "额外收入：$$§G0.150§!\n"
- BLR_without_tt: "额外收入：$$§G0.210§!\n"
+ BLR_with_tt: "来自联合[BLR.GetFlag]白俄罗斯-[SOV.GetFlag]俄罗斯§Y钾肥贸易§!的额外收入：$$§G0.150§!\n"
+ BLR_without_tt: "来自联合[BLR.GetFlag]白俄罗斯-[SOV.GetFlag]俄罗斯§Y钾肥贸易§!的额外收入：$$§G0.210§!\n"
  belarus_another.62.t: "白俄罗斯提议建立联合钾肥贸易商"
  belarus_another.62.d: "白俄罗斯政府提议成立两家企业联合钾肥贸易商。乌拉尔钾肥和白俄罗斯钾肥，因此我们将能够从这一资源中获得更多利润。"
  belarus_another.62.a: "我们同意"
@@ -2156,3 +2143,68 @@
  belarus_another.64.t: "白俄罗斯关闭联合钾肥贸易商"
  belarus_another.64.d: "我们两家钾肥贸易企业之间的对抗已经达到极限，白俄罗斯政府决定分配自己的公司并创建自己的贸易商。"
  belarus_another.64.a: "悲哀"
+ BLR_MZKT_desc: "明斯克轮式拖拉机厂是一家专业生产公路和非公路重型汽车、牵引车、建筑、石油天然气和机械制造企业设备安装专用轮式底盘的企业；白俄罗斯共和国国家军工委员会管辖的国有企业。"
+ BLR_minoitor_desc: "米诺托尔服务公司是一家位于明斯克的白俄罗斯企业，从事战斗履带车辆的开发、生产、现代化、维修和保养以及后者的备件供应。是国家军工联合体龙头企业之一。"
+ BLR_belspecveshtech_desc: "白俄罗斯特种外贸装备公司是白俄罗斯国有外贸单一制企业，成立于1995年专门从事武器和军民两用产品的贸易和生产。是国家军工委员会成员单位，被认为是国家武器出口领域的龙头企业。"
+ BLR_140_zavod_desc: "第140修理厂是白俄罗斯军工联合体的一家国有企业，专门从事装甲车及其发动机的修理和现代化改造。"
+ BLR_fight_the_oligarchs_desc: "我们不能允许寡头的力量在我们的国家存在，那么我们肯定不会看到经济增长。"
+ BLR_russian_fsb_desc: "俄罗斯联邦安全局将与我们的特别部门合作，为我们提供更大的政治稳定。"
+ BLR_science_boost_desc: "国家预算应尽可能多地资助科学研究。"
+ BLR_support_promka_desc: "我们将支持国内产业。"
+ BLR_boost_economic_desc: "我们的改革正在显现，经济已经开始增长。"
+ BLR_anti_gibdd_desc: "我们否决并将打击我国的LGBT宣传。"
+ BLR_union_state_course_desc: "我们的目标是联盟国家，我们将为此奋斗。"
+ BLR_support_army_desc: "我们将支持我国的军队，因为正是有了他们，我们的国家才仍然独立。"
+ BLR_russian_tver_desc: "我们将从俄罗斯购买大量货车用于我们的铁路。"
+ BLR_russian_teplovzor_desc: "我们将开始生产热像仪，并将其出售给俄罗斯武装部队。"
+ BLR_MVD_desc: "白俄罗斯国家行政机构，领导内务部的内政机构和内部部队系统，在其权力范围内，在打击犯罪、保护公共秩序、确保公共安全和协调等领域进行监管和管理 其他共和国国家行政机构在这一领域的活动。"
+ BLR_Countering_Cybercrime_desc: "网络犯罪同样受到我们的监管。"
+ SOV_pro_union_state_revout: "§Y亲联盟国§!政变"
+ BLR_soviet_system: "民族布尔什维克白俄罗斯"
+ BLR_soviet_system_desc: "民族布尔什维克已经在该国夺取了政权，并准备开始他们的第一次经济改革。鉴于前任统治者不成功的经验，其中之一将是回归苏联经济体系。"
+ BLR_free_weapon: "自由携带武器"
+ BLR_free_weapon_desc: "我们将允许我们的公民在国内自由携带武器，他们有自卫的权利！"
+ BLR_new_church: "新宗教"
+ BLR_new_church_desc: "是时候创建一个符合我们国家利益的新宗教了！"
+ BLR_reform_education: "教育改革"
+ BLR_reform_education_desc: "教育系统处于糟糕的状态，我们将修复它并对这个系统进行重大改变。其中一项创新是我们将减少学童和学生的学习时间，让他们更快地成为成熟的公民。"
+ BLR_ruralisation: "乡村化"
+ BLR_ruralisation_desc: "21世纪的趋势是人们从农村搬到城市，我们将扭转这一趋势，让穷人或无家可归者到农村去，作为回报，我们刺激他们在新住所中的活动。"
+ BLR_revoult_army: "革命军"
+ BLR_revoult_army_desc: "我们的军队并没有展现出最好的一面，它需要的是那些燃烧着革命热情、准备好为了祖国而扑向敌人机枪的人们。"
+ BLR_revoult_army_zeks: "允许囚犯入伍"
+ BLR_revoult_army_zeks_desc: "我们将开始从监狱招募囚犯加入军队，编入不同的营。停止喂养囚犯，他们必须喂养革命的火焰！"
+ BLR_revoult_army_volunteer: "革命精神"
+ BLR_revoult_army_volunteer_desc: "我们的一些士兵是如此渴望战斗，甚至到另一个国家。也许我们不应该抑制他们的热情并准备好派他们去履行国际义务？"
+ BLR_revoult_army_gco: "共产主义东正教卫士"
+ BLR_revoult_army_gco_desc: "我们将创建我们自己独特的军队，类比伊朗伊斯兰革命卫队，他们的经验给我们留下了深刻的印象。他们将被称为共产主义东正教卫士。"
+ BLR_work_army: "工人大军"
+ BLR_work_army_desc: "我们将把所有失业人员送去生产，首先为我们国家建立必需品的生产。"
+ BLR_revoult_army_gco_ground_force: "地面部队"
+ BLR_revoult_army_gco_ground_force_desc: "军队中主要且数量最多的部队类型。平时装备轻武器。主要用途：内部安全；第二：与白俄罗斯正规武装部队联合进行外部防御。"
+ BLR_revoult_army_gco_anti_corrupt: "反贪革命委员会"
+ BLR_revoult_army_gco_anti_corrupt_desc: "我们将成立一个特别单位来处理我国的反腐败斗争，没有人能逃避正义之手。"
+ BLR_revoult_army_gco_air: "空军"
+ BLR_revoult_army_gco_air_desc: "我们将创造并让我们的警卫有机会利用航空来实现他们的目标。"
+ BLR_revoult_army_anti_west: "反西方主义"
+ BLR_revoult_army_anti_west_desc: "西方文明一直是、也将永远是我们的敌人，它企图摧毁我们。"
+ BLR_revoult_army_interbrigade: "国际纵队"
+ BLR_revoult_army_interbrigade_desc: "我们打算组建旅级单位，并将其派往国外以保护我们的利益。"
+ BLR_nazbol_soviet_system_idea: "民族布尔什维克经济系统"
+ BLR_revoult_army_idea: "革命军"
+ BLR_anti_west_idea: "反西方主义"
+ GCO_anti_corruption_idea: "反贪革命委员会"
+ GCO_idea: "共产主义东正教卫士"
+ BLR_interbrigade_idea: "国际纵队"
+ BLR_free_weapon_idea: "自由携带武器"
+ BLR_ruralisation_idea: "乡村化"
+ BLR_revoult_spirits_idea: "革命精神"
+ SOV_targeted_country_has_more_than_60_percent_influence_TT: "§Y[SOV.GetAdjective]§!在[BLR.GetNameWithFlag]的影响力超过60%"
+ BLR_rus_oil_tt: "每周向§Y[SOV.GetFlag]俄罗斯§!支付§R0.044§!的能源成本。\n"
+ BLR_rus_oil_positive_tt: "每周向§Y[SOV.GetFlag]俄罗斯§!支付§R0.066§!的能源成本。\n"
+ BLR_sov_oil_tt: "来自§Y[BLR.GetFlag]白俄罗斯§!能源合同的额外收入：$$§G0.44§!\n"
+ BLR_sov_oil_positive_tt: "来自§Y[BLR.GetFlag]白俄罗斯§!能源合同的额外收入：$$§G0.66§!\n"
+ belarus_another.65.t: "亲联盟国政变"
+ belarus_another.65.d: "我们试图利用我们所有的行政和执法资源以及关系在白俄罗斯发动政变。"
+ belarus_another.65.a: "让我们看看结果"
+ BLR_oil_sov: "与白俄罗斯的能源合同"
