--- a/localisation/simp_chinese/state_names_l_simp_chinese.yml
+++ b/localisation/simp_chinese/state_names_l_simp_chinese.yml
@@ -364,9 +364,9 @@
  STATE_363: "塞内加尔北部"
  STATE_364: "中塞内加尔"
  STATE_365: "冈比亚"
- STATE_366: "阿扎瓦德"
- STATE_367: "东马里"
- STATE_368: "西马里"
+ STATE_366: "通布图"
+ STATE_367: "锡卡索"
+ STATE_368: "库利科罗"
  STATE_369: "毛里塔尼亚沿海"
  STATE_370: "毛里塔尼亚荒漠草原"
  STATE_371: "阿德拉尔"
@@ -1161,3 +1161,8 @@
  STATE_1160: "昂加瓦"
  STATE_1161: "基塔"
  STATE_1162: "图努"
+ STATE_1163: "基达尔"
+ STATE_1164: "加奥"
+ STATE_1165: "梅纳卡"
+ STATE_1166: "卡伊"
+ STATE_1167: "昂松戈"
