HKG LegCo working and move sth useless into modding resources

--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -287,7 +287,9 @@
  legco_current_motion: "Current Motion: [ROOT.legco_current_motion]"
  legco_none_motion_tt: "None"
  legco_railway_development_strategy_2000_tt: "Railway Development Strategy 2000"
-
+ legco_electoral_reform_tt: "Electoral Reform"
+ legco_railway_development_strategy_2000_focus_tt: "The Motion §YRailway Development Strategy 2000§! will be voted in the §YLegCo§!.\n\nThe §CPro-establishment Camp§! and §8Pan-democracy Camp§! would approval this motion."
+ legco_electoral_reform_focus_tt: "The Motion §YElectoral Reform§! will be voted in the §YLegCo§!.\n\nThe §CPro-establishment Camp§! and §8Pan-democracy Camp§! would approval this motion."
  #DYNAMIC MODIFIERS
  #Housing Issue
  UHM_dynamic_modifies_TT: "\nModify §Y$HKG_unrestricted_housing_market$§! by"
