Iraqi & Saudi Parties

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -65,6 +65,8 @@ v1.10.0
   - Removed a large number of unused localization from the European Union files
   - Add Simplified Chinese localization support
   - Added a small tooltip improvement to the "hide/show" money button
+  - Romanized Iraqi political parties to be in Arabic
+  - Romanized Saudi political parties to be in Arabic
 
  Map:
   - Revamp Iran region
