--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -834,25 +834,25 @@
  ICE.Nat_Populism_2016_desc: "Right-wing Populist - Flokkur Fólksins (People's Party) is a populist party that are against immigration and cooperation with the European Union, and otherwise seek to combat poverty and corruption."
 
  ### Iraq ###
- IRQ.liberalism: "£IRQ_liberalism_small Iraqi National Accord"
+ IRQ.liberalism: "£IRQ_liberalism_small Al-Wifaq Al-Watani Al-'Iraqi"
  IRQ.liberalism_icon: "£IRQ_liberalism_small"
  IRQ.liberalism_desc: "Liberal - The Iraqi National Accord was founded in London in 1991 as the primary non-Tehran based opposition to Saddam Hussein. It's primary source of funding has historically come from Saudi Arabia, UK and the United States. In 1996 it attempted a failed coup against Saddam with the help of the CIA."
  IRQ.liberalism_2017: "£IRQ_liberalism_2017_small Iraqi National Movement"
  IRQ.liberalism_2017_icon: "£IRQ_liberalism_2017_small"
  IRQ.liberalism_2017_desc: "Liberal - The Iraqi National Movement was a coalition founded on the basis of secularism and non-sectarianism, with a mix of some Iraqi Nationalism. It is comprised of some of Iraq's largest secular parties, including Al Wataniya."
- IRQ.socialism: "£IRQ_western_social_small Islamic Dawa Party - Iraq Organisation"
- IRQ.socialism_icon: "£IRQ_western_social_small"
- IRQ.socialism_desc: "socialism - Throughout Saddam Hussein's dictatorial rule, the Dawa party was subjected to a brutal campaign of Persecution and extermination, forcing most of its surviving leaders to flee to neighbouring nations and Europe, where they continued to lead the activists who remained in the country fighting the regime with organized insurrection. However, over time, disagreements and confrontations emerged between certain party members who remained in the nation and the exiled leaders, causing the party to split and a portion of the underground organisation within Iraq to form the Islamic Dawa Party-Iraq Organization led by Hashim Al-Mosawy, the party's head, who is well-known and admired among the Iraqi Shias."
- IRQ.conservatism: "£IRQ_conservatism_small Islamic Dawa Party - Iraq organisation"
+ IRQ.socialism: "£IRQ_national_congress Al-Moutammar Al-Watani"
+ IRQ.socialism_icon: "£IRQ_national_congress"
+ IRQ.socialism_desc: "Welfare State - The Iraqi National Congress was formed following the Persian Gulf War as an umbrella organization in order to resist the Ba'athist order in Iraq. The group was funded by the United States, and it consisted of Shi'ites, former Military Officers, Liberals, Socialists and many other political and ethnic groups."
+ IRQ.conservatism: "£IRQ_conservatism_small"
  IRQ.conservatism_icon: "£IRQ_conservatism_small"
  IRQ.conservatism_desc: "conservatives - Throughout Saddam Hussein's dictatorial rule, the Dawa party was subjected to a brutal campaign of Persecution and extermination, forcing most of its surviving leaders to flee to neighbouring nations and Europe, where they continued to lead the activists who remained in the country fighting the regime with organized insurrection. However, over time, disagreements and confrontations emerged between certain party members who remained in the nation and the exiled leaders, causing the party to split and a portion of the underground organisation within Iraq to form the Islamic Dawa Party-Iraq Organization led by Hashim Al-Mosawy, the party's head, who is well-known and admired among the Iraqi Shias."
- IRQ.Conservative: "£IRQ_Conservative_small Islamic Dawa Party - Iraq organisation"
+ IRQ.Conservative: "£IRQ_Conservative_small Hizb ad-Da'wa al-Islāmiyya"
  IRQ.Conservative_icon: "£IRQ_Conservative_small"
  IRQ.Conservative_desc: "Reactionary - The Islamic Dawa Party is a Shiite religious party that drew inspiration from the late Iraqi cleric al-Sadr. However, it gradually fell under the influence of Iran and engaged in several assassination plots against Saddam Hussein. It's primary point of contrast with ISCI is that it belives political power should reside with the wider Ummah, not just concentrated among Islamic Scholars."
- IRQ.Vilayat_e_Faqih: "£IRQ_Vilayat_e_Faqih_small Badr Organization"
+ IRQ.Vilayat_e_Faqih: "£IRQ_Vilayat_e_Faqih_small Munazzama Badr"
  IRQ.Vilayat_e_Faqih_icon: "£IRQ_Vilayat_e_Faqih_small"
  IRQ.Vilayat_e_Faqih_desc: "Hardline Shiite Revolutionary - The Badr Organization originates as the armed wing of ISCI, but has since evolved into a independent political organization inspired by Hezbollah. It's politics and military operations are largely controlled by Iran's Revolutionary Guard."
- IRQ.Mod_Vilayat_e_Faqih: "£IRQ_Mod_Vilayat_e_Faqih_small ISCI"
+ IRQ.Mod_Vilayat_e_Faqih: "£IRQ_Mod_Vilayat_e_Faqih_small Al-Majlis Al-A'ala Al-Islami Al-'Iraqi"
  IRQ.Mod_Vilayat_e_Faqih_icon: "£IRQ_Mod_Vilayat_e_Faqih_small"
  IRQ.Mod_Vilayat_e_Faqih_desc: "Moderate Shiite Revolutionary - The Islamic Supreme Council of Iraq was established in Iran in 1982 as the \"Supreme Council for the Islamic Revolution in Iraq\". While willing to work alongside other parties in a government, it's long-term aim is to establish a Islamic Republic controlled by Islamic scholars, similar to Iran."
  IRQ.Caliphate: "£generic_Caliphate_small Islamic State of Iraq"
@@ -860,25 +860,25 @@
  IRQ.Neutral_conservatism_2017: "£IRQ_Neutral_conservatism_small Victory Alliance"
  IRQ.Neutral_conservatism_2017_icon: "£IRQ_Neutral_conservatism_small"
  IRQ.Neutral_conservatism_2017_desc: "Conservative - Victory Alliance. Losing the struggle for leadership in the Islamic Dawa Party, former PM Haider al-Abadi founded the Victory Alliance as his personal political vehicle. It is a reasonably moderate and pragmatic Shiite Islamist Party, though with a legacy of sectarianism from al-Abadi time as Prime Minister."
- IRQ.Neutral_Communism: "£IRQ_Neutral_Communism_small Iraqi Communist Party"
+ IRQ.Neutral_Communism: "£IRQ_Neutral_Communism_small Al-hizb aš-šiyū'ī al-'irāqī"
  IRQ.Neutral_Communism_icon: "£IRQ_Neutral_Communism_small"
  IRQ.Neutral_Communism_desc: "Communist - The Iraqi Communist Party has long dominated leftist politics in Iraq. It's uneasy alliance with the Ba'ath Party, brokered by the Soviet Union, broke down in 1979, and it has since advocated armed struggle. It is secular and socialist."
- IRQ.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Iraqi Islamic Party"
+ IRQ.Neutral_Muslim_Brotherhood: "£IRQ_islamic_party Hizb al-Islami al-Iraqi"
  IRQ.Neutral_Muslim_Brotherhood_desc: "Moderate Islamist - The Iraqi Islamic Party is the official branch of the Muslim Brotherhood in Iraq, and function as one of the primary vehicles of Iraq's Sunni minority."
  IRQ.Neutral_Muslim_Brotherhood_2017: "£IRQ_Neutral_Muslim_Brotherhood_small Muttahidoon"
  IRQ.Neutral_Muslim_Brotherhood_2017_icon: "£IRQ_Neutral_Muslim_Brotherhood_small"
  IRQ.Neutral_Muslim_Brotherhood_2017_desc: "Moderate Islamist - Muttahidoon (Uniters for Reform Coalition) is the primary Sunni political alliance in Iraq, and is dominated by the ideology of the pan-Islamist Muslim Brotherhood. It advocates strengthening the autonomy of Iraq's Sunni regions."
- IRQ.Nat_Populism: "£IRQ_Nat_Autocracy_small Ba'ath Party"
+ IRQ.Nat_Populism: "£IRQ_Nat_Autocracy_small Hizb al-Ba'th al-'Arabī al-Ishtirākī fī al-'Irāq"
  IRQ.Nat_Autocracy_icon: "£IRQ_Nat_Autocracy_small"
  IRQ.Nat_Populism_desc: "Ba'athism - The Arab Socialist Ba'ath Party of Iraq came to power in a military coup in 1968. Originally the same party as the pan-Arabist Syrian Ba'ath Party, the Iraqi branch adopted Iraqi nationalism as it's core ideology, with the split evolving into a blood-feud where Syria backed Iran against Iraq. Under the leadership of Saddam Hussein, it has promoted the revival of a militaristic \"Greater Mesopotamia\" based on despotism and increasing islamification of the previously secular state."
- IRQ.Neutral_conservatism: "£generic_Neutral_conservatism_small Sadrist Integrity Party"
+ IRQ.Neutral_conservatism: "£IRQ_sardist Al-Tayyār al-Sadrī"
  IRQ.Neutral_conservatism_desc: "Iraqi Nationalism - Sadrist Integrity Party. The Sadrist Movement is a Shi'ite political movement with populist and nationalist values. While it's Sadrist militias have been backed by Iran, it seeks freedom from domination by any foreign power."
- IRQ.Nat_Autocracy: "£generic_Nat_Autocracy_small Iraqi Armed Forces"
+ IRQ.Nat_Autocracy: "£IRQ_armed_forces Riasat Arkan Aljaysh Aleiraqiu"
  IRQ.Nat_Autocracy_icon: "£IRQ_Nat_Autocracy_small"
- IRQ.Nat_Autocracy_desc: ""
+ IRQ.Nat_Autocracy_desc: "Military Junta - The Armed forces of Iraq were formed in the early 1930's, and have been involved in various political activities ranging from coups, including the one which saw the overthrow of the Hashemite Dynasty,"
 
- IRQ.Monarchist: "£generic_Monarchist_small House of Hashim"
- IRQ.Monarchist_desc: ""
+ IRQ.Monarchist: "£IRQ_monarch Al-Hāshimiyyūn"
+ IRQ.Monarchist_desc: "Monarchism - The Hashemite Dynasty in Iraq had ruled from 1921 to 1958, having been overthrown by the military. Currently, the title for the head of the house is held by Ra'ad bin Zeid."
  IRQ.Conservative_2018: "£IRQ_Conversative_2017_small Civilized Alliance"
  IRQ.Conservative_2018_icon: "£IRQ_Liberalism_2017_small"
  IRQ.Conservative_2018_desc: "Conservative - The Civilized Alliance is one of two of the largest secular coalitions in Iraq, it's main ideologies are secularism and non-sectarinism and puts a focus on rebuilding Iraq."
@@ -3273,11 +3273,11 @@
  SAU.Caliphate_2009: "£SAU_salafist_jihadism Al-Qaeda in the Arabian Peninsula"
  SAU.Caliphate_icon: "£SAU_salafist_jihadism"
  SAU.Caliphate_desc: "Salafi Jihadist - Al-Qaeda is a Salafist jihadist movement founded by Osama bin Laden and other so-called \"Afghan Arabs\" who fought for the Mujahideen during the Soviet Union's invasion of Afghanistan. Drawing upon the ideology of Sayyid Qutb, al-Qaeda has come to be the organization most commonly associated with Islamic terror. Its appeal for global jihad has allowed it to gain a presence across the Muslim world. Ever since King Fahd rejected bin Laden's offer of military assistance against Saddam Hussein during the invasion of Kuwait and instead solicited American support, al-Qaeda has sought to overthrow the House of Saud by force."
- SAU.Kingdom: "£SAU_kingdom House of Saud"
+ SAU.Kingdom: "£SAU_kingdom Āl Su'ūd"
  SAU.Kingdom_icon: "£SAU_kingdom"
  SAU.Kingdom_desc: "Wahhabi Monarchist - Since Abdulaziz \"Ibn Saud\" conquered the majority of the Arabian Peninsula in the early 1900s, the House of Saud has ruled over the lands of Najd, Hejaz, the Eastern Province, Asir, Jizan and Najran. The al-Sauds have relied on an alliance with the followers of al-Wahhab,a Salafi cleric who advocated a return to a \"purer\" form of Sunni Islam. The religious legitimacy granted by Wahhabism has supported Saudi rule through the issuing of fatwas by Wahhabi clerics that sanctify Saudi political decisions. The Saudi brand of Salafism, which forbids any form of political opposition and protest, is distinct from more populist brands of Salafism which oppose the concentration of religious authority in a political elite or advocate global jihad."
  ###non-aligned
- SAU.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small The Sahwa Movement"
+ SAU.Neutral_Muslim_Brotherhood: "£muslim_brotherhood_small Al-Sahwa Al-Islamiyya"
  SAU.Neutral_Muslim_Brotherhood_desc: "Moderate Islamist - The Sahwa, or Islamic Awakening Movement, emerged in the 1990s as a loose network of Sunni clerics who perceived the Saudi monarchy as departing from \"true\" Islam. The movement has pushed for genuine political reform in the Kingdom of Saudi Arabia, but has failed to achieve success due to the Saudi monarchy's imprisonment and co-optation of dissenting clerics."
  SAU.Neutral_Muslim_Brotherhood_icon: "£muslim_brotherhood_small"
  SAU.Neutral_Muslim_Brotherhood_2011: "£SAU_reformist_shite Umma Islamic Party"
@@ -3287,10 +3287,10 @@
  SAU.Neutral_green_icon: "£SAU_green"
  SAU.Neutral_green_desc: ""
  ###nationalist
- SAU.Nat_Fascism: "£IRQ_Nat_Autocracy_small Ba'ath Party"
+ SAU.Nat_Fascism: "£IRQ_Nat_Autocracy_small Hizb al-Ba'th al-'Arabī"
  SAU.Nat_Fascism_icon: "£IRQ_Nat_Autocracy_small"
  SAU.Nat_Fascism_desc: ""
- SAU.Nat_Autocracy: "£generic_Nat_Autocracy_small Armed Forces of Arabia"
+ SAU.Nat_Autocracy: "£generic_Nat_Autocracy_small Al-Quwwat al-Askariyah Arabīyah"
  SAU.Nat_Autocracy_desc: ""
 
  ## Turkey ##
