--- a/Changelog.txt
+++ b/Changelog.txt
@@ -67,6 +67,11 @@ v1.10.0
   - Added a small tooltip improvement to the "hide/show" money button
   - Romanized Iraqi political parties to be in Arabic
   - Romanized Saudi political parties to be in Arabic
+  - Romanized Turkish political parties to be in Turkish
+  - Romanized Pakistani political parties to be in Urdu
+  - Romanized Azeri political parties to be in Azeri-Turkish
+  - Romanized Turkmen political parties to be in Trukhmen-Turkish
+  - Romanized Tajik political parties to be in Bukharian-Farsi
 
  Map:
   - Revamp Iran region
